public/styles/cardSearch.css
@import url('https://fonts.googleapis.com/css?family=Raleway');

body {
  color: white;
  margin: 0;
  padding: 0;
  font-family: Raleway;
  background-image: url('/images/nephy.png');
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

main, h1 {
  text-align: center;
}

h1 {
  text-shadow: 3px 3px black;
}

.class-image {
  height: 100px;
  width: 100px;
  cursor: pointer;
  box-shadow: 2px 2px 5px 0px black;
  border-radius: 50%;
}

.card-search {
  padding: 20px;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.navbar {
  background-color: whitesmoke;
}

.logout, .search-link, .list-link {
  float: right;
}

li a {
  display: block;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

.card-display {
  display: inline-block;
  text-align: center;
  text-decoration: none;
  position: relative;
}

.logout {
  float: left;
  background-color: lightgrey
}

.js-class-button {
  cursor: pointer;
}

#crafts {
  margin: 0 auto;
  padding: 0;
  list-style: none;
  text-align: center;
}

#crafts li {
  display: inline-block;
  border-radius: 50%;
  text-align: center;
}

.card-picture {
  height: 250px;
  width: 200px;
  cursor: pointer;
  z-index: -1;
  position: relative;
}

.tooltip {
  transition: opacity 0.1s ease-in-out;
  opacity: 0;
  display: block;
  position: absolute;
  background-color: darkgrey;
  color: white;
  border-radius: 6px; 
  width: 200px;
  padding: 5px;
}

.card-display:hover .tooltip {
  opacity: .75;
}

.actions {
  opacity: 0;
  transition: opacity 0.1s ease-in-out;
  display: block;
  position: absolute;
  bottom: 50px;
  width: 200px;
}

li.card-display:hover .actions {
  opacity: 1;
}

